# python_recipes

./: README.md
python2/: README.md  backup_bigger.py  compress_quality_images.py  delete_unused_images.py  generate_thumbnails.py
python3/: README.md  detect_device_in_windows.py  pynamodb_basic_example.py  watchdog_ex.py  watchdog_ex2.py
python3/dynamodb_sqlalchemy_basic/: README.md  run_sqlalchemy_examples.py  settingsdata.json  sqlalchemy_api.py
python3/json_web_token/: .gitignore  README.md  pyproject.toml  requirements.txt  test_jws_signature.py  utils.py
python3/json_web_token/src/json_web_token/: __init__.py  utils.py
python3/json_web_token/testcerts/: example-cert.pem  example-priv_sk.pem
python3/json_web_token/tests/: test_jws_signature.py
python3/json_web_token/tests/testcerts/: example-cert.pem  example-priv_sk.pem
python3/watchdog/: README.md  watchdog_1.py  watchdog_2.py
